--- a/index.html
+++ b/index.html
@@ -323,6 +323,101 @@
           </div>
         </div>
       </section>
+      
+      <!-- testimonials-->
+            <!-- Testimonials -->
+      <section id="testimonials" class="mt-20">
+        <h3 class="text-2xl font-bold text-center">What our partners say</h3>
+        <p class="mt-2 text-gray-600 text-center max-w-2xl mx-auto">
+          Universities, employers, students, and government agencies trust AuthChain to make verification fast, transparent, and fraud-proof.
+        </p>
+
+        <div class="mt-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- University -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-primary text-white px-3 py-2 rounded-lg font-bold">U</div>
+              <div>
+                <h4 class="font-semibold">State University</h4>
+                <p class="text-xs text-gray-500">Examination Board</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “With AuthChain, we cut down our verification backlog from <b>weeks to minutes</b>. Our students now get globally shareable proof of their degrees instantly.”
+            </p>
+          </div>
+
+          <!-- Company -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-accent text-white px-3 py-2 rounded-lg font-bold">C</div>
+              <div>
+                <h4 class="font-semibold">TechHire Pvt. Ltd.</h4>
+                <p class="text-xs text-gray-500">Recruitment Head</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “Fake resumes were a huge risk. AuthChain helps us <b>instantly verify candidates</b> and avoid fraudulent hires. Hiring is now faster and safer.”
+            </p>
+          </div>
+
+          <!-- Government -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-yellow-500 text-white px-3 py-2 rounded-lg font-bold">G</div>
+              <div>
+                <h4 class="font-semibold">Govt. of Jharkhand</h4>
+                <p class="text-xs text-gray-500">Higher Education Dept.</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “AuthChain allows us to <b>detect fraud rings in real-time</b> and enforce policies with evidence-ready reports. It’s a game-changer for governance.”
+            </p>
+          </div>
+
+          <!-- Student -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-pink-500 text-white px-3 py-2 rounded-lg font-bold">S</div>
+              <div>
+                <h4 class="font-semibold">Anjali Singh</h4>
+                <p class="text-xs text-gray-500">B.Sc. Physics Graduate</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “When applying abroad, I simply shared my <b>AuthChain verification link</b> instead of attested copies. The process was stress-free and globally trusted.”
+            </p>
+          </div>
+
+          <!-- Employer -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-green-600 text-white px-3 py-2 rounded-lg font-bold">E</div>
+              <div>
+                <h4 class="font-semibold">NextGen Corp.</h4>
+                <p class="text-xs text-gray-500">HR Director</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “AuthChain reduced our pre-hire verification time by <b>90%</b>. Candidates appreciate how fast and transparent the process is.”
+            </p>
+          </div>
+
+          <!-- International University -->
+          <div class="bg-white p-6 rounded-lg shadow-sm border">
+            <div class="flex items-center gap-3">
+              <div class="bg-purple-600 text-white px-3 py-2 rounded-lg font-bold">I</div>
+              <div>
+                <h4 class="font-semibold">Global University</h4>
+                <p class="text-xs text-gray-500">Admissions Office</p>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-700 text-sm">
+              “International admissions often face forged transcripts. With AuthChain, we only accept <b>digitally verified records</b>, which saves time and builds trust.”
+            </p>
+          </div>
+        </div>
+      </section>
 
       <!-- Contact / CTA -->
       <section
@@ -376,19 +471,22 @@
           </button>
         </form>
       </section>
+
+
+      
+
     </main>
 
     <!-- Footer -->
-    <footer class="mt-10 border-t bg-white">
-      <div
-        class="max-w-7xl mx-auto px-6 py-6 text-sm text-gray-600 flex flex-col md:flex-row justify-between"
-      >
+       <footer class="mt-10 border-t bg-white">
+      <div class="max-w-7xl mx-auto px-6 py-6 text-sm text-gray-600 flex flex-col md:flex-row justify-between items-center">
         <div>© AuthChain — Secure Certificate Verification</div>
-        <div class="mt-3 md:mt-0">
-          Built for Jharkhand | Privacy-first • Contact: hello@authchain.example
+        <div class="mt-3 md:mt-0 text-center md:text-right">
+          Built by <b>TeamShield</b> on SIH for Ministry of Jharkhand
         </div>
       </div>
     </footer>
+
 
     <!-- Modal -->
     <div
