avg time updated

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             </div>
             <div class="bg-white p-4 rounded-lg shadow-sm">
               <div class="text-sm text-gray-500">Avg verification time</div>
-              <div class="text-xl font-semibold">7 days → 5 min</div>
+              <div class="text-xl font-semibold">10 min → 5 min</div>
             </div>
             <div class="bg-white p-4 rounded-lg shadow-sm">
               <div class="text-sm text-gray-500">Target accuracy</div>
-              <div class="text-xl font-semibold">90%+</div>
+              <div class="text-xl font-semibold">99%+</div>
             </div>
           </div>
         </div>
